deployments/kustomize/hoppscotch/base/hoppscotch-admin/deployment-admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hoppscotch-admin
spec:
  selector:
    matchLabels:
      app: hoppscotch-admin
  replicas: 1
  template:
    metadata:
      labels:
        app: hoppscotch-admin
    spec:
      containers:
        - name: hoppscotch-admin
          image: hoppscotch-admin
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "300m"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            timeoutSeconds: 5
            initialDelaySeconds: 10
            periodSeconds: 120
            successThreshold: 1
            failureThreshold: 6
