deployments/kustomize/hoppscotch/base/hoppscotch-admin/service-admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: hoppscotch-admin
spec:
  selector:
    app: hoppscotch-admin
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
