deployments/kustomize/hoppscotch/base/hoppscotch-admin/virtualservice-admin.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: gateway-hoppscotch-admin
  namespace: hoppscotch
spec:
  hosts:
    - $(HOPPSCOTCH_ADMIN_URL)
  gateways:
    - gateway-hoppscotch-admin
  http:
    - route:
        - destination:
            host: hoppscotch-admin
            port:
              number: 80
      corsPolicy:
        allowOrigins:
          - exact: $(ADMIN_URL_FULL)
          - exact: $(BACKEND_URL_FULL)
          - exact: $(FRONTEND_URL_FULL)
        allowMethods:
          - POST
          - GET
          - OPTIONS
          - PUT
          - PATCH
          - DELETE
        allowCredentials: true
        allowHeaders:
          - "content-type"
