deployments/kustomize/hoppscotch/base/hoppscotch-admin/auth-policy-allow-admin.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: auth-policy-allow-admin
  namespace: hoppscotch
spec:
  selector:
    matchLabels:
      app: hoppscotch-admin
  action: ALLOW
  rules:
    - from:
        - source:
            remoteIpBlocks: [ "TODO" ]
      to:
        - operation:
            paths: [ "*" ]
